--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <div id="divv">啊士大夫拉萨弗里达</div>
+  <div id="divv2">啊士大夫拉萨弗里达</div>
+  <div id="divv3">啊士大夫拉萨弗里达</div>
 
   <script src="./main.js"></script>
 </body>
