手动编辑提交信息

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="divv2">啊士大夫拉萨弗里达</div>
 
   <div id="divv3">修改了main的代码</div>
-  <div id="divv3">这里是dev的测试代码</div>
+  <div id="divv3">这里是dev的测试代码aaa </div>
 
   <script src="./main.js"></script>
 </body>
